# Code

LW1/cpp1.1/: hello.cpp
LW1/cpp1.2/: hello_err.cpp
LW1/cpp1.4/: square_equation.cpp
LW4/sfml3/: CMakeCache.txt  Makefile  cmake_install.cmake
LW4/sfml3/00/: Makefile  cmake_install.cmake
LW4/sfml3/01/: Makefile  cmake_install.cmake
LW4/sfml3/02/: Makefile  cmake_install.cmake  main.cpp
LW4/sfml3/03/: Makefile  cmake_install.cmake  main.cpp
LW4/sfml3/04/: Makefile  cmake_install.cmake  main.cpp
LW4/sfml3/sfml3.1/: Makefile  cmake_install.cmake  main.cpp
LW4/sfml3/sfml3.2/: Makefile  cmake_install.cmake
LW4/sfml3/sfml3.3/: Makefile  cmake_install.cmake  main.cpp
LW5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
LW5/workshop1.1/: Makefile  cmake_install.cmake
LW5/workshop1.2/: Makefile  cmake_install.cmake  main.cpp  pseudocode.cpp
LW5/workshop1.3/: Makefile  cmake_install.cmake  main.cpp
LW5/workshop1.4/: Makefile  cmake_install.cmake  main.cpp
workshop2/: CMakeLists.txt
workshop2/workshop2.1/: main.cpp
workshop2/workshop2.2/: main.cpp
workshop2/workshop2.3/: main.cpp
workshop2/workshop2.4/: main.cpp
workshop2/workshop2.5/: main.cpp
workshop2/workshop2.6/: main.cpp
workshop3/: CMakeLists.txt
workshop3/workshop3.1/: CMakeLists.txt  ball.cpp  ball.h  main.cpp  text.cpp  text.h
workshop3/workshop3.3/: CMakeLists.txt  line.cpp  line.h  main.cpp
workshop3/workshop3.6/: CMakeLists.txt  blocks.cpp  blocks.h  main.cpp  random.cpp  random.h
